unpackaged/main/default/objects/Event__c/fields/Event_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Event_Date_c__c</fullName>
    <description>This field will track event&#39;s date and time values</description>
    <label>Event Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>