unpackaged/main/default/objects/Event__c/fields/Max_Tickets__c.field-meta.xml
<CustomField>
    <fullName>Max_Tickets__c</fullName>
    <description>This field will track the maximum number of tickets allowed per event record.</description>
    <label>Max Tickets</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>