unpackaged/main/default/objects/Event__c/fields/Test_Deploy_Field__c.field-meta.xml
<CustomField>
    <fullName>Test_Deploy_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test Deploy Field</label>
    <type>Checkbox</type>
</CustomField>