unpackaged/main/default/objects/Event__c/fields/Total_Tickets_Sold__c.field-meta.xml
<CustomField>
    <fullName>Total_Tickets_Sold__c</fullName>
    <description>The sum of the total number of registration tickets sold per event.</description>
    <label>Total Tickets Sold</label>
    <summarizedField>Registration__c.Ticket_Count__c</summarizedField>
    <summaryForeignKey>Registration__c.Event__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>