unpackaged/main/default/objects/Event__c/validationRules/Null_Tickets_Block.validationRule-meta.xml
<ValidationRule>
    <fullName>Null_Tickets_Block</fullName>
    <active>true</active>
    <description>This validation rule blocks users from setting zero (&quot;0&quot;) tickets on their registration records.</description>
    <errorConditionFormula>Max_Tickets__c &lt; 0</errorConditionFormula>
    <errorMessage>The minimum number of tickets per registration is one (1).</errorMessage>
</ValidationRule>